package FPLManager.model;

public class DummyPlayer extends Player {

    public DummyPlayer() {
        super(-1, -1, null, null, null);
    }
}
